--- a/bookstore/Views/Book/Create.cshtml
+++ b/bookstore/Views/Book/Create.cshtml
@@ -37,17 +37,31 @@
         <div class="col-md-6">
             <h5>List Authors</h5>
             <table>
-                @foreach (var item in ViewBag.Authors)
-                {
+                <thead>
                     <tr>
-                        <td>
-                            @item.Name
-                        </td>
-                        <td>
-                            <input type="checkbox" name="author" value="@item.AuthorID">
-                        </td>
+                        <th>
+                            ID
+                        </th>
+                        <th>
+                            Name
+                        </th>
+                        <th></th>
                     </tr>
-                }
+                </thead>
+                <tbody>
+                    @foreach (var item in ViewBag.Authors)
+                {
+                        <tr>
+                            <td>@item.AuthorID</td>
+                            <td>
+                                @item.Name
+                            </td>
+                            <td>
+                                <input type="checkbox" name="author" value="@item.AuthorID">
+                            </td>
+                        </tr>
+                    }
+                </tbody>
             </table>
         </div>
         <div class="form-group">
