--- a/bookstore/Views/Book/Create.cshtml
+++ b/bookstore/Views/Book/Create.cshtml
@@ -27,7 +27,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.DateEdition, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.DateEdition, htmlAttributes: new { @class = "control-label col-md-2" }) (MM/dd/yyyy)
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.DateEdition, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.DateEdition, "", new { @class = "text-danger" })
